--- a/partials/stocks.html
+++ b/partials/stocks.html
@@ -17,7 +17,7 @@
 		<div class="col-md-10">
 			<ul>
 				<li ng-repeat="stock in filtered = ( stocks | filter:query | orderBy:orderProp )">
-					<a href="#/stocks/{{ stock.id }}" class="thumb">
+					<a href="#/stocks/{{ stock.company }}" class="thumb">
 						<img ng-src="content/img/{{ stock.image }}" width="50px" height="50px">
 					</a>
 					<p>
