added detail template

--- a/partials/stock.html
+++ b/partials/stock.html
@@ -1,1 +1,4 @@
-<span>{{ stockId }}</span>
+<img ng-src="{{ stock.image }}">
+<h1>{{ stock.company }}</h1>
+<h3> {{ stock.name }}</h3>
+<p>{{ stock.value | currency }}</p>
