--- a/partials/stocks.html
+++ b/partials/stocks.html
@@ -18,7 +18,7 @@
 			<ul>
 				<li ng-repeat="stock in filtered = ( stocks | filter:query | orderBy:orderProp )">
 					<a href="#/stocks/{{ stock.company }}" class="thumb">
-						<img ng-src="content/img/{{ stock.image }}" width="50px" height="50px">
+						<img ng-src="{{ stock.image }}" width="50px" height="50px">
 					</a>
 					<p>
 						{{ stock.company }} - {{ stock.name }} - {{ stock.value | currency }}
