--- a/partials/stock.html
+++ b/partials/stock.html
@@ -1,4 +1,4 @@
-<img ng-src="{{ stock.image }}">
+<img ng-src="{{ stock.image }}" width="50px" height="50px">
 <h1>{{ stock.company }}</h1>
 <h3> {{ stock.name }}</h3>
 <p>{{ stock.value | currency }}</p>
