--- a/content/sass/screen.scss
+++ b/content/sass/screen.scss
@@ -4,3 +4,8 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+
+$light: 100;
+$regular: 400;
+$bold: 600;
+$color: $EEEEEE;
