--- a/content/sass/style.scss
+++ b/content/sass/style.scss
@@ -1,7 +1,4 @@
 @import "compass/reset";
 
-$light: 100;
-$regular: 400;
-$bold: 600;
+$font-stack:    Helvetica, sans-serif;
 $background: #eeeeee;
-
