--- a/content/sass/style.sass
+++ b/content/sass/style.sass
@@ -1,7 +1,11 @@
 @import "compass/reset"
 
 $font-stack: Helvetica, sans-serif
-$background: #eeeeee
+$sidebar-background: #eeeeee
+$content-background: #eeeeee
 
-body
-	background-color: $background
+.sidebar
+	background-color: $sidebar-background
+
+.content
+	background-color: $content-background
