--- a/partials/stocks.html
+++ b/partials/stocks.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-2">
+		<div class="col-md-2 sidebar">
 			<p>
 			   	Search: 
 			   	<input ng-model="query">
@@ -14,7 +14,7 @@
 			</p>
 			Found: {{ filtered.length }}
 		</div>
-		<div class="col-md-10">
+		<div class="col-md-10 content">
 			<ul>
 				<li ng-repeat="stock in filtered = ( stocks | filter:query | orderBy:orderProp )">
 					<a href="#/stocks/{{ stock.company }}" class="thumb">
