--- a/content/css/style.css
+++ b/content/css/style.css
@@ -55,9 +55,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 .sidebar {
-  background-color: #eeeeee;
+  background-color: #eee;
 }
 
 .content {
-  background-color: #eeeeee;
+  background-color: #fff;
 }
