--- a/content/sass/style.sass
+++ b/content/sass/style.sass
@@ -1,8 +1,8 @@
 @import "compass/reset"
 
 $font-stack: Helvetica, sans-serif
-$sidebar-background: #eeeeee
-$content-background: #eeeeee
+$sidebar-background: #eee
+$content-background: #fff
 
 .sidebar
 	background-color: $sidebar-background
